完成多文件级上下文理解与JIT提示。